--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Brick Breaker Game</title>
     <style>
         body {
@@ -15,24 +16,47 @@
             font-family: 'JetBrains Mono', monospace;
             color: white;
         }
+
         #game-interface {
             border: 2px solid white;
             background-color: black;
         }
+
         #score {
-            margin-bottom: 20px;
             font-size: 24px;
+        }
+
+        .btns {
+            margin-top: 15px;
+            display: flex;
+            gap: 10px;
+        }
+
+        button {
+            padding: 8px 16px;
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 14px;
+            background: white;
+            color: black;
+            border: none;
+            cursor: pointer;
         }
     </style>
 </head>
+
 <body>
+    <h1 style="font-size: 32px; color: white; margin-bottom: 10px;">Brick Breaker</h1>
     <div id="score">Score : 0</div>
     <p id="high-score">High Score : 0</p>
     <canvas id="game-interface"></canvas>
+    <p style="margin-top: 10px; font-size: 18px; color: gray;">
+    Press <strong>Space</strong> to Pause/Play | Press <strong>R</strong> to Restart
+    </p>
+
     <div id="left-touch" style="position: absolute; left: 0; bottom: 0; width: 50%; height: 100%; z-index: 99;"></div>
     <div id="right-touch" style="position: absolute; right: 0; bottom: 0; width: 50%; height: 100%; z-index: 99;"></div>
 
-
-    <script src="script.js"></script> 
+    <script src="script.js"></script>
 </body>
+
 </html>
